# ifx-sqlcmd

./: BUGS  ChangeLog  Depend.mk  FAQ.html  INSTALL  Install.mk  Makefile  Makefile.in  README  TODO  acdevstd.m4  acinformix.m4  acsetup.sh  actimer.m4  appblob.1  appblob.ec  appblob.mk  basedigit.c  basename.c  build-static.sh  build.sh  cchrstrlit.h  chkfifo.c  chkkwlist.pl  chktty.c  chktty.h  chrcstrlit.c  cistrcmp.c  config.h  config.h.in  config.status  configure  configure.ac  configure.bat  connblob.ec  connblob.h  connect.ec  connect.h  connecty.c  connecty.c.std  (+199 more)
Missing/: lfind.c  memmove.c  mkstemp.c  search.h  snprintf.c  strerror.c  strftime.c  varchar.h  vsnprintf.c
Test/: Makefile  README  SCHEDULE
Test/selblob/: Makefile  t00basics.sh
Test/sqlcmd/: Makefile  README  t00version.sh  t01mutexopt.sh  t02varchar.sh  t03boolean.sh  t04lvarchar.sh  t05text.sh
Test/tools/: Makefile  Trace.sh  environ.sh  pathfile.sh  rcsmunger.pl  stt_run.sh  stt_test.sh  stt_testsuite.sh
WinNT/: Depend.mk  Makefile  config.h  esqlc.mk  esqlinfo.h
